--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ language: perl
 perl:
   - "5.16"
 before_install:
-  - sudo apt-get install libhunspell-1.3-0 hunspell-en-us libhunspell-dev
+  - sudo apt-get install libhunspell-1.3-0 hunspell-en-us libhunspell-dev myspell-es
 script: "perl Makefile.PL && make disttest"
