--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ language: perl
 perl:
   - "5.16"
 before_install:
-  - sudo apt-get install libhunspell-1.3-0 hunspell-en-us libhunspell-dev myspell-es
+  - sudo apt-get update -qq
+  - sudo apt-get -y install libhunspell-1.3-0 hunspell-en-us libhunspell-dev myspell-es
 script: "perl Makefile.PL && make disttest"
