--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ branches:
     - gh-pages
 language: perl
 perl:
+  - "stable"
+  - "5.20"
+  - "5.18"
+  - "5.22"
   - "5.16"
+  - "5.14"
+  - "5.12"
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get -y install libhunspell-1.3-0 hunspell-en-us libhunspell-dev myspell-es
