--- a/.github/workflows/check-readme.yml
+++ b/.github/workflows/check-readme.yml
@@ -32,8 +32,5 @@ jobs:
           sudo: false
       - name: Comprueba la ortografía
         run: |
-          curl https://raw.githubusercontent.com/JJ/Test-Text/master/data/Spanish.aff -o Spanish.aff
-          curl https://raw.githubusercontent.com/SublimeText/Dictionaries/master/Spanish.dic -o Spanish.dic
-          echo "use Test::Text; just_check( '.','.', 'Spanish' ); " > just_check.t
-          rm TODO.md # No nos interesan
+          echo "use Test::Text; just_check( '.','.', 'English' ); " > just_check.t
           perl -MTAP::Harness -e 'use utf8; my $harness = TAP::Harness->new( { verbosity => 0} ); die "FAIL" if $harness->runtests( "just_check.t" )->failed;'
